feat: create basic OAuth flow for Next.js website

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
 </head>
 
 <body>
-	<div id="verticalCenteringDiv">
+	<div id="centeringDiv">
 		<div class="section">
 			<h1>V.A.L.E.T.</h1>
 			<span id="versionTag">Beta</span>
