Surface more detailed error message to user
On my first attempt at using the system, I did not realize I had already
registered my MAC address. This is a quick fix that might make it more
clear to other first-time users.

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
 				}
 			} catch (error) {
 				console.log('Could not register MAC Address.\n' + error);
-				alert('Could not register MAC Address.');
+				alert('Could not register MAC Address.\n' + error);
 			}
 		}
 
